include_directories(.)
add_library(qtools
qbuffer.cpp
qcollection.cpp
qcstring.cpp
qdatastream.cpp
qdatetime.cpp
qdir.cpp
qfile.cpp
qfileinfo.cpp
qgarray.cpp
qgcache.cpp
qgdict.cpp
qglist.cpp
qglobal.cpp
qgstring.cpp
qgvector.cpp
qiodevice.cpp
qregexp.cpp
qstring.cpp
qtextstream.cpp
qtextcodec.cpp
qstringlist.cpp
qxml.cpp
qmap.cpp
qthread.cpp
qmutex.cpp
qutfcodec.cpp
qfile_unix.cpp
qdir_unix.cpp
qfileinfo_unix.cpp
qthread_unix.cpp
qmutex_unix.cpp
qwaitcondition_unix.cpp
)
